# lpr

./: .dockerignore  .gitignore  README.md  docker-compose.yml  environment.env  main.py  ood-run.sh  pyproject.toml
broker/: broker.py
docker/: Dockerfile
helper/: generalHelper.py
misc/: value.py
requirement/: requirements.txt
src/: licensePlateRecognition.py  value.py
src/broker/: broker.py
src/helper/: generalHelper.py
src/misc/: value.py
src/storage/: storage.py
storage/: storage.py
