[tool.poetry]
name = "src"
version = "0.1.0"
description = "LPR Service"
authors = ["Lukas Fam <takeruadelbert@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
easyocr = "1.2.1"
kafka-python = "~=2.0.2"
opencv-python = "~=4.4.0.46"
numpy = "^1.19.4"
requests = "^2.25.1"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
